; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_libopusenc.c_libopus_write_header.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_libopusenc.c_libopus_write_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32, i32, i32 }

@.str = private unnamed_addr constant [9 x i8] c"OpusHead\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32, i32, i32, i8*)* @libopus_write_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @libopus_write_header(%struct.TYPE_3__* %0, i32 %1, i32 %2, i32 %3, i8* %4) #0 {
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  store i8* %15, i8** %11, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  store i32 %18, i32* %12, align 4
  %19 = call i32 @bytestream_put_buffer(i8** %11, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 8)
  %20 = call i32 @bytestream_put_byte(i8** %11, i32 1)
  %21 = load i32, i32* %12, align 4
  %22 = call i32 @bytestream_put_byte(i8** %11, i32 %21)
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 3
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @bytestream_put_le16(i8** %11, i32 %25)
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @bytestream_put_le32(i8** %11, i32 %29)
  %31 = call i32 @bytestream_put_le16(i8** %11, i32 0)
  %32 = load i32, i32* %9, align 4
  %33 = call i32 @bytestream_put_byte(i8** %11, i32 %32)
  %34 = load i32, i32* %9, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %44

36:                                               ; preds = %5
  %37 = load i32, i32* %7, align 4
  %38 = call i32 @bytestream_put_byte(i8** %11, i32 %37)
  %39 = load i32, i32* %8, align 4
  %40 = call i32 @bytestream_put_byte(i8** %11, i32 %39)
  %41 = load i8*, i8** %10, align 8
  %42 = load i32, i32* %12, align 4
  %43 = call i32 @bytestream_put_buffer(i8** %11, i8* %41, i32 %42)
  br label %44

44:                                               ; preds = %36, %5
  ret void
}

declare dso_local i32 @bytestream_put_buffer(i8**, i8*, i32) #1

declare dso_local i32 @bytestream_put_byte(i8**, i32) #1

declare dso_local i32 @bytestream_put_le16(i8**, i32) #1

declare dso_local i32 @bytestream_put_le32(i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
